--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "emilia-dashboard",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -8,6 +8,10 @@
   },
   "author": "Henrique de Godoy Inácio",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "devDependencies": {
     "eslint": "^8.49.0",
     "eslint-config-standard": "^17.1.0",
